# lumus-sql-builder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: rust.yml
src/: errors.rs  lib.rs  main.rs  sqlite.rs
src/builder/mysql/: insert.rs  join.rs  mod.rs  select.rs  where_.rs
src/mysql/: create.rs  delete.rs  insert.rs  mod.rs  select.rs  update.rs  where_.rs
src/sqlite/: columns.rs  condition.rs  create.rs  create_table.rs  delete.rs  insert.rs  join.rs  select.rs  update.rs
tests/: mysql.rs  sqlite.rs
