[package]
name = "lua-sql-builder"
version = "0.1.3"
edition = "2021"
authors = ["Dayvson Spacca spacca.dayvson@gmail.com"]
description = "Build sql statements from structs"
readme = "README.md"
repository = "https://github.com/dayvsonspacca/lua-sql-builder"
license = "MIT"
keywords = ["sql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lua_sql_builder"

[dependencies]
