[package]
name = "lumus-sql-builder"
version = "0.1.2"
edition = "2021"
authors = ["Dayvson Spacca spacca.dayvson@gmail.com"]
description = "Build sql statements programmatically and intuitively"
readme = "README.md"
repository = "https://github.com/dayvsonspacca/lumus-sql-builder"
license = "MIT"
keywords = ["sql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lumus_sql_builder"

[dependencies]
